Update benchmark results and README for correlated parameters
- Updated benchmark summary with v2 results after correlated parameter fix
- 25/26 queries passing (baseline_pk_lookup has compound _id issue)
- Added correlated parameters feature documentation to README
- Added example of correlationGroup usage in query config

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>